--- a/src/libs/sprite_image/templates/sprite_image/widget.html
+++ b/src/libs/sprite_image/templates/sprite_image/widget.html
@@ -5,6 +5,7 @@
     <div class="sprite-icon-preview"
          style="width: {{ widget.size.0 }}px;
              height: {{ widget.size.1 }}px;
+             background-color: {{ widget.background }};
              background-image: url({{ widget.sprite }});
              background-position: {{ initial_position.0 }}px {{ initial_position.1 }}px">
     </div>
@@ -15,6 +16,7 @@
           <div class="sprite-icon-item {% if key == value %}active{% endif %}"
                style="width: {{ widget.size.0 }}px;
                    height: {{ widget.size.1 }}px;
+                   background-color: {{ widget.background }};
                    background-image: url({{ widget.sprite }});
                    background-position: {{ val.0 }}px {{ val.1 }}px"
                data-key="{{ key }}"></div>
