--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -170,7 +170,7 @@
 
     span {
       display: inline-block;
-      word-break: break-all;
+      word-break: break-word;
       vertical-align: middle;
     }
   }
