--- a/src/apps_common/menu/templates/menu/menu.html
+++ b/src/apps_common/menu/templates/menu/menu.html
@@ -1,7 +1,9 @@
 <ul>
   {% for item in items %}
     <li class="{% if item.active %}active{% endif %} {{ item.classes }}">
-      <a href="{{ item.link }}" {{ item.flat_attrs }}>{{ item.title }}</a>
+      <a href="{{ item.link }}" {{ item.flat_attrs }}>
+        <span>{{ item.title }}</span>
+      </a>
 
       {% if item.childs %}
         {% include 'menu/menu.html' with items=item.childs %}
