--- a/src/static/admin/scss/dl_core.scss
+++ b/src/static/admin/scss/dl_core.scss
@@ -105,6 +105,7 @@ $footer_1col: $media480;
     border: none;
 
     a {
+      padding: 6px 0 6px 27px;
       text-shadow: none;
       border-bottom: none;
       background: inherit;
@@ -115,7 +116,6 @@ $footer_1col: $media480;
     }
   }
 
-  // меню первого уровня
   & > ul {
     padding: 14px 0;
 
@@ -127,14 +127,11 @@ $footer_1col: $media480;
     // подменюхи
     ul {
       display: none;
+      padding: 0;
 
       li.active > a {
         color: #333;
         font-weight: bold;
-      }
-
-      a {
-        padding-left: 45px;
       }
     }
 
@@ -180,7 +177,7 @@ $footer_1col: $media480;
       }
     }
 
-
+    // меню первого уровня
     & > li {
       & > a {
         padding: 8px 10px 8px 18px;
@@ -199,10 +196,18 @@ $footer_1col: $media480;
             content: none;
           }
         }
+      }
 
-        & > ul > li > a {
-          padding: 6px 0 6px 27px;
-        }
+      & > ul {
+        padding: 7px 0;
+      }
+
+      & > ul > li > a {
+        padding-left: 27px;
+      }
+
+      & > ul > li > ul > li > a {
+        padding-left: 45px;
       }
 
       &.separator {
