--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -150,8 +150,8 @@
     a {
       position: relative;
       display: inline-block;
-      padding-left: 36px;
       min-height: 32px;
+      max-width: 100%;
       z-index: 1;
       @include valign_after;
 
@@ -170,8 +170,10 @@
 
     span {
       display: inline-block;
+      padding-left: 36px;
       word-break: break-word;
       vertical-align: middle;
+      @include border-box;
     }
   }
 }
