--- a/src/static/admin/scss/dl_core.scss
+++ b/src/static/admin/scss/dl_core.scss
@@ -150,8 +150,9 @@ $footer_1col: $media480;
       & > ul {
         display: block;
         position: absolute;
-        left: 180px;
+        left: 100%;
         padding: 0;
+        margin-left: 1px;
         margin-top: -30px;
         margin-right: -250px;
         z-index: 10;
