--- a/src/static/scss/slider/plugins/navigation.scss
+++ b/src/static/scss/slider/plugins/navigation.scss
@@ -53,6 +53,7 @@ $dot_active_color: rgba($white, 1);
       display: inline-block;
       vertical-align: middle;
       background-color: $dot_color;
+      @include border-box;
       @include border_radius(50%);
       @include media_map(width, $dot_size);
       @include media_map(height, $dot_size);
