--- a/src/templates/admin/index.html
+++ b/src/templates/admin/index.html
@@ -10,5 +10,5 @@
 {% endblock %}
 
 {% block content %}
-  <h2 style="margin: 0">{% trans 'Welcome to the Directline Admin Web Application' %}</h2>
+  <h2 style="margin: 0">{% trans 'Welcome to the Direct Line Development Admin Web Application' %}</h2>
 {% endblock %}
