--- a/src/apps_common/form_helper/templates/form_helper/form.html
+++ b/src/apps_common/form_helper/templates/form_helper/form.html
@@ -3,10 +3,18 @@
 
 {% csrf_token %}
 
-{% for field in form.hidden_fields %}
-  {% render_field form field.name %}
-{% endfor %}
+{% block prefix %}{% endblock prefix %}
 
-{% for field in form.visible_fields %}
-  {% render_field form field.name %}
-{% endfor %}
+{% block hidden_fields %}
+  {% for field in form.hidden_fields %}
+    {% render_field form field.name %}
+  {% endfor %}
+{% endblock %}
+
+{% block visible_fields %}
+  {% for field in form.visible_fields %}
+    {% render_field form field.name %}
+  {% endfor %}
+{% endblock %}
+
+{% block suffix %}{% endblock suffix %}
