--- a/src/apps_common/form_helper/templates/form_helper/field.html
+++ b/src/apps_common/form_helper/templates/form_helper/field.html
@@ -1,6 +1,8 @@
 <div class="field {{ field_classes }}">
   {% block field %}
-    {{ field.label_tag }}
+    <div class="label-holder">
+      {{ field.label_tag }}
+    </div>
     {{ field }}
   {% endblock field %}
 
