--- a/src/static/admin/scss/dl_core.scss
+++ b/src/static/admin/scss/dl_core.scss
@@ -105,7 +105,7 @@ $footer_1col: $media480;
     border: none;
 
     a {
-      padding: 6px 0 6px 27px;
+      padding: 6px 8px 6px 27px;
       text-shadow: none;
       border-bottom: none;
       background: inherit;
