--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -218,6 +218,7 @@ td, th {
 
   label {
     position: relative;
+    display: inline-block;
     padding-left: 20px;
     margin: 0;
     z-index: 1;
