--- a/src/libs/color_field/static/color_field/admin/css/color.css
+++ b/src/libs/color_field/static/color_field/admin/css/color.css
@@ -1,4 +1,6 @@
-body .form-horizontal .colorfield-preview {
-    padding: 0 2px;
-    height: 30px;
+body .colorfield-preview {
+    height: 32px;
+    padding: 0px 2px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
