--- a/src/libs/color_field/static/color_field/admin/css/color.css
+++ b/src/libs/color_field/static/color_field/admin/css/color.css
@@ -1,6 +1,5 @@
-body .colorfield-preview {
-    height: 32px;
-    padding: 0px 2px;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+body .controls .colorfield-preview {
+    height: 26px;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
