--- a/src/static/scss/_conf.scss
+++ b/src/static/scss/_conf.scss
@@ -3,6 +3,7 @@
 //=======================
 $media1200: 1200px;
 $media1024: 1024px;
+$media900: 900px;
 $media768: 768px;
 $media640: 640px;
 $media600: 600px;
