--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -54,6 +54,7 @@ $mobile_active_color: $menu_active_color;
   right: -100%;
   top: 0;
   width: 60%;
+  height: 768px;
   height: 100vh;
   z-index: 50;
   text-align: left;
