--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -3,7 +3,11 @@
 <header>
   <div class="grid-block">
     <div class="logo-box">
-      <a href="/"></a>
+      {% if is_main_page %}
+        <div class="logo"></div>
+      {% else %}
+        <a href="/" class="logo"></a>
+      {% endif %}
     </div>
 
     <div class="menu-box">
