--- a/src/apps/contacts/templates/contacts/mails/message.html
+++ b/src/apps/contacts/templates/contacts/mails/message.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load text %}
 
 {% if message.name %}
   <p><b>{% trans 'Name' %}:</b> {{ message.name }}</p>
@@ -13,7 +14,7 @@
 {% endif %}
 
 {% if message.message %}
-  <p><b>{% trans 'Message' %}:</b> {{ message.message }}</p>
+  <p><b>{% trans 'Message' %}:</b> {{ message.message|clean }}</p>
 {% endif %}
 
 {% if message.referer %}
