--- a/src/static/scss/slider/plugins/navigation.scss
+++ b/src/static/scss/slider/plugins/navigation.scss
@@ -1,6 +1,6 @@
 @import "mixins";
 
-// размер области точек
+// размер кликабельной области точек
 $area_size: 16px;
 
 // расстояние между областями
