--- a/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
+++ b/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
@@ -70,6 +70,8 @@ $close_btn_weight: 2px;
 
   // слайдер
   .slider-root {
+    height: 100%;
+
     .slider-slide {
       height: 100%;
       padding: 40px 80px;
