--- a/src/static/scss/parallax.scss
+++ b/src/static/scss/parallax.scss
@@ -11,4 +11,8 @@
   text-align: center;
   @include transform(translate(-50%, -50%));
   @include backface-visibility(hidden);
+
+  @at-root .js & {
+    display: none;
+  }
 }
