--- a/src/apps_common/footer/templates/footer/footer.html
+++ b/src/apps_common/footer/templates/footer/footer.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="dl-logo">
-      <a href="http://directlinedev.com/" title="Direct Line Development" target="_blank"></a>
+      <a href="http://directlinedev.com/" title="Web Development Company Philadelphia" target="_blank"></a>
     </div>
   </div>
 </footer>
