fix robots example

--- a/src/apps_common/seo/templates/seo/admin/robots_include.html
+++ b/src/apps_common/seo/templates/seo/admin/robots_include.html
@@ -4,8 +4,8 @@
   <p>Example:</p>
 <pre>
 User-agent: *
-Host: http://mywebsite.com
-Sitemap: http://mywebsite.com/sitemap.xml
+Host: www.mywebsite.com
+Sitemap: http://www.mywebsite.com/sitemap.xml
+Disallow: /blocks/
 </pre>
 </div>
-
