--- a/src/apps_common/menu/templates/menu/menu.html
+++ b/src/apps_common/menu/templates/menu/menu.html
@@ -1,7 +1,7 @@
-<ul>
+<ul itemscope itemtype="http://schema.org/SiteNavigationElement">
   {% for item in items %}
     <li class="{% if item.active %}active{% endif %}">
-      <a href="{{ item.link }}" class="{{ item.classes }}" {{ item.flat_attrs }}>
+      <a href="{{ item.link }}" class="{{ item.classes }}" {{ item.flat_attrs }} itemprop="url">
         <span>{{ item.title }}</span>
       </a>
 
