--- a/src/apps_common/footer/templates/footer/footer.html
+++ b/src/apps_common/footer/templates/footer/footer.html
@@ -1,7 +1,7 @@
-<footer>
+<footer itemscope itemtype="https://schema.org/WPFooter">
   <div class="grid-block">
     <div class="copyright">
-      &copy; {% now "Y" %} Direct Line Development Inc
+      &copy; <span itemprop="copyrightYear">{% now "Y" %}</span> Direct Line Development Inc
     </div>
 
     <div class="dl-logo">
