--- a/src/apps_common/seo/templates/seo/admin/robots_include.html
+++ b/src/apps_common/seo/templates/seo/admin/robots_include.html
@@ -7,5 +7,6 @@ User-agent: *
 Host: www.mywebsite.com
 Sitemap: http://www.mywebsite.com/sitemap.xml
 Disallow: /blocks/
+Disallow: /ajax_cache/
 </pre>
 </div>
